--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -19,6 +19,42 @@ SECUENCIA
         </record>
 
 <!--
+FONDO DE FINANCIAMIENTO
+-->
+
+        <record model="ir.actions.act_window" id="financiamiento_list_action">
+            <field name="name">Fondos de financiamiento</field>
+            <field name="res_model">gdc.fondos</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form</field>
+            <field name="help" type="html">
+              <p class="oe_view_nocontent_create">
+                Crear fondos de financiemientos.
+              </p>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="fondos_tree_view">
+            <field name="name">gdc.proyectos.tree</field>
+            <field name="model">gdc.fondos</field>
+            <field name="arch" type="xml">
+                <tree string="Fondos de financiamiento">
+                    <field name="name"/>
+                </tree>
+            </field>
+        </record>
+       
+        <record model="ir.ui.view" id="fondos_form_view">
+            <field name="name">gdc.proyectos.form</field>
+            <field name="model">gdc.fondos</field>
+            <field name="arch" type="xml">
+                <form string="Fondos de financiamiento">
+                    <field name="name" />
+                </form>
+            </field>
+        </record>
+
+<!--
 PROYECTOS
 -->
 
@@ -42,6 +78,7 @@ PROYECTOS
                     <field name="supervisor_id"/>
                     <field domain="[('domain','=','responsible_id')]" name="responsible_id"/>
                     <field name="cobertura" />
+                    <field name="tipo_financiamiento"/>
                     <field name="address_id" />
                     <field name="priority"/>
                     <field name="date_start"/>
@@ -62,12 +99,13 @@ PROYECTOS
                 <form string="Asignacion" version="7.0">
                     <group>
                         <group>
-                            <field name="actividad" string="Actividad"/>
-                             <field name="cobertura"/>
+							<field name="codigo" readonly="1"/>
+                            <field name="date_created" readonly="1"/>
                         </group>
                         <group>
-                            <field name="date_created" readonly="1"/>
-                            <field name="codigo" readonly="1"/>
+                            <field name="actividad" string="Actividad"/>
+                             <field name="cobertura"/>
+                             <field name="tipo_financiamiento"/>
                         </group>
                         <group>
                             <field name="supervisor_id" domain="[('category_id.name','ilike','Supervisor')]"/>
@@ -293,5 +331,7 @@ TAREAS
         <menuitem id="asigancion_menu" name="Asignacion" parent="proyectos_menu" action="proyectos_list_action" sequence="1"/>
         <menuitem id="tareas_menu" name="Tareas" parent="proyectos_menu" action="tareas_list_action" sequence="3"/>
         
+        <menuitem id="configuration_menu" name="Configuration" parent="main_gobiernodecalle_menu" sequence="10"/>
+        <menuitem id="fondos_menu" name="Fondos de financiamiento" parent="configuration_menu" action="financiamiento_list_action"/>
     </data>
 </openerp>
