--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -330,11 +330,56 @@ TAREAS
             </field>
         </record>
 
+<!--
+INCIDENCIAS
+-->
+
+        <record model="ir.actions.act_window" id="incidencias_list_action">
+            <field name="name">Incidencias</field>
+            <field name="res_model">gdc.incidencias</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">tree,form,calendar</field>
+            <field name="help" type="html">
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="incidencias_tree_view">
+            <field name="name">gdc.incidencias.tree</field>
+            <field name="model">gdc.incidencias</field>
+            <field name="arch" type="xml">
+                <tree string="Incidencias">
+                    <field name="tarea_id" />
+                    <field name="name_incidencia" />
+                    <field name="date_reporter" />
+                </tree>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="incidencias_form_view">
+            <field name="name">gdc.incidencias.form</field>
+            <field name="model">gdc.incidencias</field>
+            <field name="arch" type="xml">
+                <form string="Incidencias" version="7.0">
+                    <group>
+                        <group>
+							<field name="date_reporter" />
+							<field name="tarea_id" />
+							<field name="name_incidencia" />
+                        </group>
+						<separator string="Especifique las caracteristicas de la incidencia" colspan="2"/>
+                        <field name="description"/>
+					</group>
+                </form>
+            </field>
+        </record>
+
+
         <menuitem id="main_gobiernodecalle_menu" name="Gobierno de calle y Direccionalidad" sequence="120"/>
 
         <menuitem id="proyectos_menu" name="Actividades" parent="main_gobiernodecalle_menu" sequence="10"/>
         <menuitem id="asigancion_menu" name="Asignacion" parent="proyectos_menu" action="proyectos_list_action" sequence="1"/>
         <menuitem id="tareas_menu" name="Tareas" parent="proyectos_menu" action="tareas_list_action" sequence="3"/>
+        <menuitem id="incidencias_menu" name="Incidencias" parent="proyectos_menu" action="incidencias_list_action" sequence="4"/>
         
         <menuitem id="configuration_menu" name="Configuration" parent="main_gobiernodecalle_menu" sequence="10"/>
         <menuitem id="fondos_menu" name="Fondos de financiamiento" parent="configuration_menu" action="financiamiento_list_action"/>
