Se añade a la vista de proyectos la vista tree para las incidencias

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -185,7 +185,14 @@ PROYECTOS
                             </field>
                         </page>
                         <page string="Visualizador de incidencias">
-                            <field name="incidencias"/>
+                            <field name="incidencias_ids" nolabel="1" colspan="4" mode="tree">
+                                <tree string="Incidencias">
+									<field name="date_reporter"/>
+									<field name="tarea_id"/>
+                                    <field name="name_incidencia" />
+                                    <field name="description"/>
+                                </tree>
+                            </field>
                         </page>
                         <page string="Conclusiones">
 							<separator string="Defina las conclusiones" colspan="2"/>
