ADD - Se añade campo para adjuntar digital de la gaceta.

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -110,6 +110,7 @@ PROYECTOS
                              <field name="cobertura"/>
                              <field name="priority"/>
                              <field name="tipo_financiamiento"/>
+                             <field name="adjunto_gaceta"/>  
                         </group>
                     </group>
                     <notebook>
