ADD - Se añade en conclusiones y acuerdos attrs="{invisible:[(estado, !=, Terminado)]}" para que solo estos pages sean mostrados cuando el proyecto este terminado

--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -195,11 +195,11 @@ PROYECTOS
                                 </tree>
                             </field>
                         </page>
-                        <page string="Conclusiones">
+                        <page string="Conclusiones" attrs="{'invisible':[('estado', '!=', 'Terminado')]}">
 							<separator string="Defina las conclusiones" colspan="2"/>
-                            <field name="conclusiones"/>
+                            <field name="conclusiones" />
                         </page>
-                        <page string="Acuerdos">
+                        <page string="Acuerdos" attrs="{'invisible':[('estado', '!=', 'Terminado')]}">
 							<separator string="Defina los acuerdos llegados" colspan="2"/>
                             <field name="acuerdos"/>
                         </page>
