--- a/gobierno_de_calle/view/gobiernodecalle_view.xml
+++ b/gobierno_de_calle/view/gobiernodecalle_view.xml
@@ -175,7 +175,7 @@ PROYECTOS
 								</group>
                             </group>
                         </page>
-                        <page string="Visualizador de tareas">
+                        <page string="Visualizador de tareas" attrs="{'invisible':[('estado', '=', 'Borrador')]}">
                             <field name="tareas_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Tareas">
                                     <field name="name_tarea" />
@@ -185,7 +185,7 @@ PROYECTOS
                                 </tree>
                             </field>
                         </page>
-                        <page string="Visualizador de incidencias">
+                        <page string="Visualizador de incidencias" attrs="{'invisible':[('estado', '=', 'Borrador')]}">
                             <field name="incidencias_ids" nolabel="1" colspan="4" mode="tree">
                                 <tree string="Incidencias">
 									<field name="date_reporter"/>
